objects/C360ListViewIds__c.object
<CustomObject>
    <fields>
        <fullName>AllCustomers__c</fullName>
        <label>AllCustomers</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Business_Units__c</fullName>
        <label>Customer Business Units</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customers__c</fullName>
        <label>Customers</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>C360_ListViewsSetting</label>
</CustomObject>